--- a/runtime/hailo-8/cpp/instance_segmentation/yolov8seg/CMakeLists.txt
+++ b/runtime/hailo-8/cpp/instance_segmentation/yolov8seg/CMakeLists.txt
@@ -1,12 +1,10 @@
-cmake_minimum_required(VERSION 3.18)           # FetchContent без лишних флагов
+cmake_minimum_required(VERSION 3.18)
 project(vstream_yolov8seg_example_cpp LANGUAGES CXX)
 
-# ---------------------------------------------------------------------------
-# ⬤  Общие опции компилятора
-# ---------------------------------------------------------------------------
+# ──────────────────────────────  компилятор  ───────────────────────────────
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS   OFF)
+set(CMAKE_CXX_EXTENSIONS  OFF)
 
 set(COMMON_WARNINGS
         -Wall -Wextra -Wconversion -Werror
@@ -14,59 +12,44 @@ set(COMMON_WARNINGS
 )
 add_compile_options(${COMMON_WARNINGS} -O3 -fconcepts)
 
-find_package(Threads REQUIRED)
-find_package(OpenCV  REQUIRED)
-find_package(HailoRT REQUIRED)
+# ──────────────────────────────  зависимости  ──────────────────────────────
+find_package(Threads  REQUIRED)
+find_package(OpenCV   REQUIRED)
+find_package(HailoRT  REQUIRED)
+find_package(xtl      REQUIRED)          # ищет xtlConfig.cmake
+find_package(xtensor  REQUIRED)          # ищет xtensorConfig.cmake
+find_package(xtensor-blas REQUIRED)      # ищет xtensor-blasConfig.cmake
 
-# ---------------------------------------------------------------------------
-# ⬤  FetchContent: xtl ▸ xtensor ▸ xtensor-blas
-# ---------------------------------------------------------------------------
-include(FetchContent)
+# Если библиотеки лежат НЕ в /usr/local, добавьте:
+#   cmake -DCMAKE_PREFIX_PATH="/opt/xtensor;/opt/xtl" …
 
-set(EXTERNAL_INSTALL "${CMAKE_BINARY_DIR}/external")   # единая install-точка
-set(BUILD_TYPE       Release)
+# ─────────────────────  «обёртки» x*.hpp (по желанию)  ─────────────────────
+# Если ваши готовые пакеты xtensor уже кладут xview.hpp, xarray.hpp и т. д.
+# в корень include/xtensor, блок ниже можно удалить/закомментировать.
 
-function(fetch_and_install NAME GIT_URL GIT_TAG)
-    FetchContent_Declare(${NAME}
-            GIT_REPOSITORY  ${GIT_URL}
-            GIT_TAG         ${GIT_TAG}
-    )
-    FetchContent_MakeAvailable(${NAME})
-
-    add_custom_target(${NAME}-install ALL
-            COMMAND ${CMAKE_COMMAND} -S ${${NAME}_SOURCE_DIR} -B ${NAME}-build
-            -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
-            -DCMAKE_INSTALL_PREFIX=${EXTERNAL_INSTALL}
-            -DBUILD_TESTS=OFF
-            COMMAND ${CMAKE_COMMAND} --build ${NAME}-build --target install -j
-            BYPRODUCTS ${EXTERNAL_INSTALL}/include
-            COMMENT "Installing ${NAME} → ${EXTERNAL_INSTALL}"
-    )
-endfunction()
-
-fetch_and_install(xtl          https://github.com/xtensor-stack/xtl.git            0.8.0)
-fetch_and_install(xtensor      https://github.com/xtensor-stack/xtensor.git        0.26.0)
-fetch_and_install(xtensorblas  https://github.com/xtensor-stack/xtensor-blas.git   0.22.0)
-
-# ---------------------------------------------------------------------------
-# ⬤  Раздать “x*.hpp” в корень xtensor/ (обёртки для старых include-путей)
-# ---------------------------------------------------------------------------
+set(XTENSOR_INCLUDE_DIR "${xtensor_DIR}/../../include/xtensor") # путь от xtensorConfig.cmake
 add_custom_target(xtensor-wrap ALL
         COMMAND ${CMAKE_COMMAND} -P ${CMAKE_BINARY_DIR}/wrap_xtensor.cmake
-        DEPENDS xtensorblas-install        # ждём, пока xtensor уже установлен
+        BYPRODUCTS "${XTENSOR_INCLUDE_DIR}/xview.hpp"
         COMMENT "Creating wrapper x*.hpp links in xtensor/"
 )
-# сразу после блока add_custom_target(xtensor-wrap ALL …)
-add_custom_command(TARGET xtensor-wrap POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -P ${CMAKE_BINARY_DIR}/link_xtensor_dirs.cmake
-)
 
-file(WRITE ${CMAKE_BINARY_DIR}/link_xtensor_dirs.cmake
-        "file(GLOB dirs \"${EXTERNAL_INSTALL}/include/xtensor/*\")\n"
+file(WRITE ${CMAKE_BINARY_DIR}/wrap_xtensor.cmake
+        "file(GLOB_RECURSE hdrs \"${XTENSOR_INCLUDE_DIR}/*/x*.hpp\")\n"
+        "foreach(hdr IN LISTS hdrs)\n"
+        "  get_filename_component(base \${hdr} NAME)\n"
+        "  set(dst \"${XTENSOR_INCLUDE_DIR}/\${base}\")\n"
+        "  if(NOT EXISTS \${dst})\n"
+        "    execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink \${hdr} \${dst})\n"
+        "  endif()\n"
+        "endforeach()\n"
+        "\n"
+        "# подпапки (core / containers / views / misc ...) → уровень выше\n"
+        "file(GLOB dirs \"${XTENSOR_INCLUDE_DIR}/*\")\n"
         "foreach(d IN LISTS dirs)\n"
         "  if(IS_DIRECTORY \${d})\n"
         "    get_filename_component(base \${d} NAME)\n"
-        "    set(link \"${EXTERNAL_INSTALL}/include/\${base}\")\n"
+        "    set(link \"${XTENSOR_INCLUDE_DIR}/../\${base}\")\n"
         "    if(NOT EXISTS \${link})\n"
         "      execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink \${d} \${link})\n"
         "    endif()\n"
@@ -74,48 +57,28 @@ file(WRITE ${CMAKE_BINARY_DIR}/link_xtensor_dirs.cmake
         "endforeach()\n"
 )
 
-
-file(WRITE ${CMAKE_BINARY_DIR}/wrap_xtensor.cmake
-        "file(GLOB_RECURSE hdrs \"${EXTERNAL_INSTALL}/include/xtensor/*/x*.hpp\")\n"
-        "foreach(hdr IN LISTS hdrs)\n"
-        "  get_filename_component(base \${hdr} NAME)\n"
-        "  set(dst \"${EXTERNAL_INSTALL}/include/xtensor/\${base}\")\n"
-        "  if(NOT EXISTS \${dst})\n"
-        "    execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink \${hdr} \${dst})\n"
-        "  endif()\n"
-        "endforeach()\n"
-)
-
-# ---------------------------------------------------------------------------
-# ⬤  Исходники примера
-# ---------------------------------------------------------------------------
+# ─────────────────────────────  исходники  ────────────────────────────────
 file(GLOB SRC CONFIGURE_DEPENDS *.cpp)
 
 add_executable(${PROJECT_NAME} ${SRC})
-add_dependencies(${PROJECT_NAME}
-        xtl-install xtensor-install xtensorblas-install xtensor-wrap
-)
+add_dependencies(${PROJECT_NAME} xtensor-wrap)   # уберите, если wrap не нужен
 
-# include / lib для внешних пакетов
 target_include_directories(${PROJECT_NAME} PRIVATE
-        ${EXTERNAL_INSTALL}/include
         ${OpenCV_INCLUDE_DIRS}
 )
-target_link_directories(${PROJECT_NAME} PRIVATE ${EXTERNAL_INSTALL}/lib)
 
 target_link_libraries(${PROJECT_NAME}
         HailoRT::libhailort
+        xtensor-blas::xtensor-blas
+        xtensor::xtensor
+        xtl::xtl
         ${OpenCV_LIBS}
         Threads::Threads
 )
 
-# ---------------------------------------------------------------------------
-# ⬤  Пара удобных сообщений
-# ---------------------------------------------------------------------------
-message(STATUS "")
-message(STATUS " ───────── Build configuration ─────────")
-message(STATUS "   Install dir:  ${EXTERNAL_INSTALL}")
-message(STATUS "   xtl tag:      0.8.0")
-message(STATUS "   xtensor tag:  0.26.0")
-message(STATUS "   xtensor-blas: 0.22.0")
-message(STATUS " ───────────────────────────────────────")
+# ─────────────────────────────  вывод  ────────────────────────────────
+message(STATUS "\n ─────── Build configuration ───────")
+message(STATUS "   xtl dir:          ${xtl_DIR}")
+message(STATUS "   xtensor dir:      ${xtensor_DIR}")
+message(STATUS "   xtensor-blas dir: ${xtensor-blas_DIR}")
+message(STATUS " ─────────────────────────────────────\n")
