--- a/runtime/hailo-8/cpp/instance_segmentation/yolov8seg/CMakeLists.txt
+++ b/runtime/hailo-8/cpp/instance_segmentation/yolov8seg/CMakeLists.txt
@@ -1,84 +1,90 @@
-cmake_minimum_required(VERSION 3.18)
-project(vstream_yolov8seg_example_cpp LANGUAGES CXX)
+# ---------------------------------------------------------------------------
+#  CMakeLists.txt — vstream_yolov8seg_example_cpp
+#
+#  Cleaned-up version without the automatic download / build of
+#  xtl, xtensor, and xtensor-blas.
+#
+#  Copy this entire file as-is and place it in the project root.
+# ---------------------------------------------------------------------------
 
-# ──────────────────────────────  компилятор  ───────────────────────────────
+cmake_minimum_required(VERSION 3.11)
+project(vstream_yolov8seg_example_cpp)
+
+# ---------------------------------------------------------------------------
+#  Toolchain & compiler settings
+# ---------------------------------------------------------------------------
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS  OFF)
 
-set(COMMON_WARNINGS
-        -Wall -Wextra -Wconversion -Werror
-        -Wno-reorder -Wno-ignored-qualifiers -Wno-unused-value
-)
-add_compile_options(${COMMON_WARNINGS} -O3 -fconcepts)
-
-# ──────────────────────────────  зависимости  ──────────────────────────────
-find_package(Threads  REQUIRED)
-find_package(OpenCV   REQUIRED)
-find_package(HailoRT  REQUIRED)
-find_package(xtl      REQUIRED)          # ищет xtlConfig.cmake
-find_package(xtensor  REQUIRED)          # ищет xtensorConfig.cmake
-find_package(xtensor-blas REQUIRED)      # ищет xtensor-blasConfig.cmake
-
-# Если библиотеки лежат НЕ в /usr/local, добавьте:
-#   cmake -DCMAKE_PREFIX_PATH="/opt/xtensor;/opt/xtl" …
-
-# ─────────────────────  «обёртки» x*.hpp (по желанию)  ─────────────────────
-# Если ваши готовые пакеты xtensor уже кладут xview.hpp, xarray.hpp и т. д.
-# в корень include/xtensor, блок ниже можно удалить/закомментировать.
-
-set(XTENSOR_INCLUDE_DIR "${xtensor_DIR}/../../include/xtensor") # путь от xtensorConfig.cmake
-add_custom_target(xtensor-wrap ALL
-        COMMAND ${CMAKE_COMMAND} -P ${CMAKE_BINARY_DIR}/wrap_xtensor.cmake
-        BYPRODUCTS "${XTENSOR_INCLUDE_DIR}/xview.hpp"
-        COMMENT "Creating wrapper x*.hpp links in xtensor/"
+# Strict warnings + high-O, but keep noisy ones disabled
+set(COMPILE_OPTIONS
+        -Werror -Wall -Wextra -Wconversion -O3
+        -Wno-reorder -Wno-ignored-qualifiers -Wno-extra
+        -Wno-unused-local-typedefs -Wno-conversion -Wno-parentheses
+        -Wno-unused-but-set-variable -Wno-array-bounds -Wno-unused-value
 )
 
-file(WRITE ${CMAKE_BINARY_DIR}/wrap_xtensor.cmake
-        "file(GLOB_RECURSE hdrs \"${XTENSOR_INCLUDE_DIR}/*/x*.hpp\")\n"
-        "foreach(hdr IN LISTS hdrs)\n"
-        "  get_filename_component(base \${hdr} NAME)\n"
-        "  set(dst \"${XTENSOR_INCLUDE_DIR}/\${base}\")\n"
-        "  if(NOT EXISTS \${dst})\n"
-        "    execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink \${hdr} \${dst})\n"
-        "  endif()\n"
-        "endforeach()\n"
-        "\n"
-        "# подпапки (core / containers / views / misc ...) → уровень выше\n"
-        "file(GLOB dirs \"${XTENSOR_INCLUDE_DIR}/*\")\n"
-        "foreach(d IN LISTS dirs)\n"
-        "  if(IS_DIRECTORY \${d})\n"
-        "    get_filename_component(base \${d} NAME)\n"
-        "    set(link \"${XTENSOR_INCLUDE_DIR}/../\${base}\")\n"
-        "    if(NOT EXISTS \${link})\n"
-        "      execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink \${d} \${link})\n"
-        "    endif()\n"
-        "  endif()\n"
-        "endforeach()\n"
+# ---------------------------------------------------------------------------
+#  Paths
+# ---------------------------------------------------------------------------
+set(BASE_DIR /path/to/yolov8seg/example/folder)   # ← adjust to your source tree
+
+# ---------------------------------------------------------------------------
+#  Thread support
+# ---------------------------------------------------------------------------
+set(CMAKE_THREAD_LIBS_INIT "-lpthread")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+set(CMAKE_HAVE_THREADS_LIBRARY 1)
+set(CMAKE_USE_WIN32_THREADS_INIT 0)
+set(CMAKE_USE_PTHREADS_INIT 1)
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads)
+
+# ---------------------------------------------------------------------------
+#  External libraries
+# ---------------------------------------------------------------------------
+find_package(HailoRT REQUIRED)        # Provides HailoRT::libhailort target
+find_package(OpenCV REQUIRED)         # Populates OpenCV_LIBS / OpenCV_INCLUDE_DIRS
+
+message(STATUS "Found OpenCV headers at: ${OpenCV_INCLUDE_DIRS}")
+
+# ---------------------------------------------------------------------------
+#  Project sources
+# ---------------------------------------------------------------------------
+file(GLOB SOURCES
+        ./*.cpp
 )
 
-# ─────────────────────────────  исходники  ────────────────────────────────
-file(GLOB SRC CONFIGURE_DEPENDS *.cpp)
+# ---------------------------------------------------------------------------
+#  Target definition
+# ---------------------------------------------------------------------------
+add_executable(${PROJECT_NAME} ${SOURCES})
 
-add_executable(${PROJECT_NAME} ${SRC})
-add_dependencies(${PROJECT_NAME} xtensor-wrap)   # уберите, если wrap не нужен
-
-target_include_directories(${PROJECT_NAME} PRIVATE
+# Include directories (OpenCV + optional ONNX Runtime if you use it)
+include_directories(
         ${OpenCV_INCLUDE_DIRS}
+        ${ONNXRUNTIME_INCLUDE_DIR}         # Define this in your toolchain/file if needed
 )
 
+# Compile options
+target_compile_options(${PROJECT_NAME} PRIVATE ${COMPILE_OPTIONS} -fconcepts)
+
+# Link libraries
 target_link_libraries(${PROJECT_NAME}
         HailoRT::libhailort
-        xtensor-blas::xtensor-blas
-        xtensor::xtensor
-        xtl::xtl
+        ${CMAKE_THREAD_LIBS_INIT}
         ${OpenCV_LIBS}
-        Threads::Threads
 )
 
-# ─────────────────────────────  вывод  ────────────────────────────────
-message(STATUS "\n ─────── Build configuration ───────")
-message(STATUS "   xtl dir:          ${xtl_DIR}")
-message(STATUS "   xtensor dir:      ${xtensor_DIR}")
-message(STATUS "   xtensor-blas dir: ${xtensor-blas_DIR}")
-message(STATUS " ─────────────────────────────────────\n")
+# ---------------------------------------------------------------------------
+#  Notes
+#
+#  • The previous ExternalProject_Add blocks that automatically cloned and
+#    built xtl / xtensor / xtensor-blas have been completely removed.
+#
+#  • If your code still depends on those headers, make sure they are installed
+#    system-wide (e.g., via your package manager) or specify their include
+#    paths with `target_include_directories` instead of rebuilding them here.
+#
+#  • C++20’s standard library already provides <filesystem>, so linking
+#    against stdc++fs is no longer necessary.
+# ---------------------------------------------------------------------------
